--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@700&family=Roboto:wght@400,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css\slick.css" />
-    <link rel="stylesheet" href="css\style.css" />
-    <link rel="stylesheet" href="css\media.css" />
+    <link rel="stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
 </head>
 
 <body>
